--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@
       <a href="/" class="flex items-center space-x-2">
        
           <img 
-  src="../../build/icon.svg" 
+  src="/icon.svg" 
   alt="Logo" 
   class="w-8 h-8 bg-gradient-to-br from-primary to-accent rounded-lg" 
 />
