--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -333,7 +333,7 @@ import Header from "../components/Header.astro";
         <div class="space-y-4">
           <div class="flex items-center space-x-2">
             <img
-              src="../../../build/icon.svg"
+              src="/icon.svg"
               alt="Logo"
               class="w-8 h-8 bg-gradient-to-br from-primary to-accent rounded-lg"
             />
